google search site added

--- a/search.html
+++ b/search.html
@@ -8,7 +8,7 @@
   <div id="home-search" class="home">
      <script>
          (function() {
-             var cx = '[Your CSE Search ID]';
+             var cx = '73233c30cfc81fe3b';
              var gcse = document.createElement('script');
              gcse.type = 'text/javascript';
              gcse.async = true;
@@ -18,6 +18,10 @@
              s.parentNode.insertBefore(gcse, s);
          })();
      </script>
+
+<!--         <script async src="https://cse.google.com/cse.js?cx=73233c30cfc81fe3b"></script>
+        <div class="gcse-search"></div> -->
+
      <gcse:search queryParameterName="searchString"></gcse:search>
  </div>
 
