--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
  ---
 
   <div id="home-search" class="home">
-     <script>
+<!--      <script>
          (function() {
              var cx = '73233c30cfc81fe3b';
              var gcse = document.createElement('script');
@@ -17,7 +17,7 @@
              var s = document.getElementsByTagName('script')[0];
              s.parentNode.insertBefore(gcse, s);
          })();
-     </script>
+     </script> -->
 
 <!--         <script async src="https://cse.google.com/cse.js?cx=73233c30cfc81fe3b"></script>
         <div class="gcse-search"></div> -->
