--- a/search.html
+++ b/search.html
@@ -19,8 +19,8 @@
          })();
      </script> -->
 
-<!--         <script async src="https://cse.google.com/cse.js?cx=73233c30cfc81fe3b"></script>
-        <div class="gcse-search"></div> -->
+        <script async src="https://cse.google.com/cse.js?cx=73233c30cfc81fe3b"></script>
+        <div class="gcse-search"></div>
 
      <gcse:search queryParameterName="searchString"></gcse:search>
  </div>
